--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    cursor: none;
 }
 
 h2 {
@@ -20,4 +22,22 @@ h2 {
     display: flex;
     justify-content: space-around;
     text-align: center;
+}
+
+.cursor {
+    width: 1rem;
+    height: 1rem;
+    background-color: rgba(255, 255, 255, 0.566);
+    position: absolute;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    transition: all .3s ease;
+    transition-property: background, transform;
+    z-index: -1;
+}
+
+.mouse-hover-state {
+    transform: scale(3);
+    background-color: rgba(0, 0, 0, 0.575);
 }
